--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@
 .navbar-light .navbar-nav .nav-link {
     margin-right: 30px;
     padding: 25px 0;
-    color: #FFFFFF;
+    color: #b45959;  /*** cambiar color HOME en barra de navegacion***/
     font-size: 15px;
     text-transform: uppercase;
     outline: none;
@@ -111,7 +111,7 @@
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(--primary); /*** cambiar color HOME en barra de navegacion***/
+    color: var(--#b45959); /*** cambiar color HOME en barra de navegacion***/
 }
 
 @media (max-width: 991.98px) {
@@ -126,7 +126,7 @@
     }
 
     .navbar-light .navbar-nav {
-        border-top: 1px solid #EEEEEE;
+        border-top: 1px solid #b45959;
     }
 }
 
